added demo for array

--- a/Demo Array/index.html
+++ b/Demo Array/index.html
@@ -8,8 +8,20 @@
         var array = ["john", "james", "jobert"];
         document.write(array  +"<br/>");
         var grades = [89, 88, 70];
-         document.write(grades + "</br>");
-         document.write("my prelim grade: "+ grades[0]);
+        document.write(grades + "</br>");
+        // get array element from array
+        document.write("my prelim grade: "+ grades[0] + "</br>");
+        // output array length
+        document.write(grades.length + "</br>");
+        // reverse an array
+        document.write(array.reverse() + "</br>");
+        // sort an array
+        document.write(array.sort() + "</br>");
+        // push an element into the end of an array 
+        array.push("joshua");
+        document.write(array);
+        // pop from the 
+
     </script>
 </head>
 <body>
