corrected spelling mistake

--- a/JS_DOM/JS_DOM.html
+++ b/JS_DOM/JS_DOM.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-    <h1> DOM Manipulationw Activity</h1>
+    <h1> DOM Manipulation Activity</h1>
     <div id="content">
         <p>This a paragraph</p>
         <ul>
